# MultiAgentMCPNavigator

./: LICENSE  README.md  explaination.txt  legacy_single_agent_client.py  package-lock.json  pyproject.toml
eval/: judge.py
orchestrai/: agents.py  cli.py  mcp_tools.py  metrics.py  schemas.py  tool_runner.py  workflow.py
scripts/: view_metrics.py
servers/: browser_mcp.json  weather.py
